# linux_studio

./: .gitignore  AGENTS.md  README.md  build.yaml  project.yaml  pubspec.yaml
.github/workflows/: android.yml  ios.yml  linux.yml  macos.yml  windows.yml
generated_app/: README.md  ansi_parser.dart  class  cursor.dart  import  pubspec.yaml  screen_buffer.dart  terminal_engine.dart  terminal_renderer.dart  terminal_screen.dart
generated_app/android/app/: build.gradle.kts
generated_app/ios/Runner/: Info.plist
generated_app/ios/Runner.xcodeproj/: project.pbxproj
generated_app/lib/: main.dart
generated_app/lib/core/: app.dart
generated_app/lib/engine/: screen_buffer.dart
generated_app/lib/screens/: file_manager_screen.dart  home_screen.dart  package_manager_screen.dart  terminal_screen.dart
generated_app/lib/ui/: terminal_view.dart
generated_app/linux/: CMakeLists.txt
generated_app/linux/runner/: my_application.cc
generated_app/macos/Runner.xcodeproj/: project.pbxproj
generated_app/native/common/: terminal.h
generated_app/native/pty/: native_pty.dart  pty.c  pty.h
generated_app/native/windows/: CMakeLists.txt  build.bat  conpty.cpp  conpty.h  pipe.cpp  pipe.h  process.cpp  process.h  reader.cpp  reader.h  terminal_api.cpp  terminal_api.h  writer.cpp  writer.h
generated_app/native/windows/conpty/: CMakeLists.txt  build.ps1  conpty.cpp  conpty.h
generated_app/web/: index.html  manifest.json
generated_app/windows/: CMakeLists.txt
generated_app/windows/runner/: Runner.rc  main.cpp
linux_studio/: flutter.git  project.yaml
linux_studio/scripts/: bootstrap.sh  generate.sh
scripts/: bootstrap.sh  generate.sh
(+104 files in other folders)
